# MotaLinkAgent

./:  .pub  .gitignore  MotaBridge.csproj  Program.cs  README.ko-KR.md  README.md  README.zh-CN.md  SKILL.md  mota-bridge.config.json  omniroam.sh  setup_hostpc_ubuntu20.sh  setup_ros1.bash  skill.md
Auth/: ITokenAuthenticator.cs  TokenAuthenticator.cs
Cli/: CliDefinition.cs  CliRegistry.cs  CliSessionProcess.cs  CwdPolicy.cs  ICliRegistry.cs  ICwdPolicy.cs  IPtyProcessFactory.cs  PtyProcessFactory.cs
Config/: BridgeOptions.cs  CliOptions.cs  ConfigValidationResult.cs  ConfigValidator.cs
MasterComputer/ros/catkin_ws/src/amseokbot_milo/: CMakeLists.txt  package.xml
MasterComputer/ros/catkin_ws/src/amseokbot_milo/launch/: amseokbot_vision_stream.launch  atmega_serial_bridge.launch  chassis_kinematics.launch  line_follow_vision.launch  opencv_obstacle_avoidance.launch  single_camera_ultrasonic_mapper.launch  usb_camera_web.launch  wheel_odometry.launch  yolo_obstacle_detector.launch
MasterComputer/ros/catkin_ws/src/amseokbot_milo/scripts/: yolo_obstacle_detector_ort.py
MasterComputer/ros/catkin_ws/src/amseokbot_milo/src/: atmega_serial_bridge.cpp  chassis_kinematics.cpp  line_follow_vision.cpp  opencv_obstacle_avoidance.cpp  single_camera_ultrasonic_mapper.cpp  wheel_odometry.cpp  yolo_obstacle_detector.cpp
Protocol/: BridgeMessageTypes.cs  ClientMessages.cs  ServerMessages.cs
Security/: DangerousPathPolicy.cs  Redactor.cs
Sessions/: CliSession.cs  CreateSessionInput.cs  ISessionManager.cs  SessionEvents.cs  SessionIdleCleaner.cs  SessionManager.cs  SessionSignal.cs
(+187 files in other folders)
